# python-logging

./: Makefile  README.md  requirements.in  requirements.txt  setup.cfg  tox.ini
custom_logging/: __init__.py  __main__.py
custom_logging/lib/: constants.py
