[metadata]
name = python-logging
author = Ryan Holt
author_email = ryanwholt@hotmail.com
summary = Handle custom logging.
description_file = README.md
description_content_type = text/x-rst; charset=UTF-8
home_page = https://github.com/Reyalsorik/python-logging
project_urls =
    Documentation = https://github.com/Reyalsorik/python-logging/README.md
    Source Code = https://github.com/Reyalsorik/python-logging

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages = custom_logging

[options]
include_package_data = true
